--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,10 +16,8 @@ jobs:
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://docker.pkg.github.com -u vulcanize --password-stdin
       - name: Docker Pull
         run: docker pull docker.pkg.github.com/vulcanize/tracing-api/tracing-api:${{steps.vars.outputs.sha}}
-      - name: Docker Login to Docker Registry
-        run: echo ${{ secrets.VULCANIZEJENKINS_PAT }} | docker login -u vulcanizejenkins --password-stdin
       - name: Tag docker image
         run: docker tag docker.pkg.github.com/vulcanize/tracing-api/tracing-api:${{steps.vars.outputs.sha}} vulcanize/tracing-api:${{steps.vars.outputs.tag}}
-      - name: Docker Push to Docker Hub
-        run: docker push vulcanize/tracing-api:${{steps.vars.outputs.tag}}
+      - name: Docker Push to Github Docker Hub
+        run:  docker push docker.pkg.github.com/vulcanize/tracing-api/tracing-api:${{steps.vars.outputs.tag}}
 
