--- a/test/enviroment/docker-compose.yml
+++ b/test/enviroment/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   geth:
     restart: always
     build: 
-      context: ../data/geth
+      context: ./geth
       cache_from:
        - alpine:latest
        - golang:1.16-alpine
