--- a/test/enviroment/geth/Dockerfile
+++ b/test/enviroment/geth/Dockerfile
@@ -1,23 +1,20 @@
-FROM golang:1.16-alpine as builder
+FROM golang:1.15-alpine
 
-RUN apk add --no-cache make gcc musl-dev linux-headers git
-
-WORKDIR /ethereum
-RUN git clone https://github.com/vulcanize/go-ethereum.git -b v1.9.25-statediff /ethereum
-RUN make geth
-
-# app container
-FROM alpine
-
-RUN apk add --no-cache bash
+RUN apk add --no-cache make gcc musl-dev linux-headers git bash
 
 WORKDIR /app
+ENV GOPATH=/go
+RUN git clone https://github.com/vulcanize/ipld-eth-indexer.git /app/indexer
+RUN git clone https://github.com/vulcanize/go-ethereum.git -b v1.9.25-statediff /app/ethereum
+RUN go get -u -d github.com/pressly/goose/cmd/goose
+RUN go build -tags='no_mysql no_sqlite' -o /go/bin/goose github.com/pressly/goose/cmd/goose
 
-COPY --from=builder /ethereum/build/bin/geth /usr/local/bin/geth
+RUN cd /app/indexer && make
+RUN cd /app/ethereum && make geth
 COPY datadir /app/datadir
 COPY genesis.json /app
 COPY startgeth .
-RUN touch /app/pwd && geth --datadir "/app/datadir" init /app/genesis.json
+RUN touch /app/pwd && /app/ethereum/build/bin/geth --datadir "/app/datadir" init /app/genesis.json
 
 EXPOSE 8545 8546
 
