--- a/test/enviroment/contracts/subgraph.yaml
+++ b/test/enviroment/contracts/subgraph.yaml
@@ -6,7 +6,7 @@ dataSources:
     name: BlockNumStorage
     network: mainnet
     source:
-      address: "0x4EA3E647eed5aA6A8ce035D5799a1A9cC0Eebad1"
+      address: "0x0E623988bC18eF4a363D1E07A0C970a19822DbCF"
       abi: BlockNumStorage
     mapping:
       kind: ethereum/events
@@ -20,4 +20,23 @@ dataSources:
       callHandlers:
         - function: sync(string)
           handler: handleSync
+      file: src/mapping.ts
+  - kind: ethereum/contract
+    name: UintStorage
+    network: mainnet
+    source:
+      address: "0xCfc901EbE2cE49dB505187454c553C764D9AAf12"
+      abi: UintStorage
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - StorageSet
+      abis:
+        - name: UintStorage
+          file: abis/UintStorage.abi
+      callHandlers:
+        - function: set(string,uint256)
+          handler: handleSet
       file: src/mapping.ts
