--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -16,7 +16,7 @@ jobs:
       GOPATH: /tmp/go
     strategy:
       matrix:
-        go-version: [1.14.x, 1.15.x]
+        go-version: [1.14.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -32,6 +32,7 @@ jobs:
       - name: Test
         run: |
           cd test/enviroment/contracts && \
+          npx i && \
           npx truffle deploy && \
           npx graph codegen && \
           npx graph build
