--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Test
         run: |
           cd test/enviroment/contracts && \
-          npx i && \
+          npm i && \
           npm run deploy-contract && \
           npm run codegen && \
           npm run build  && \
