--- a/test/enviroment/geth/Dockerfile
+++ b/test/enviroment/geth/Dockerfile
@@ -4,12 +4,11 @@ RUN apk add --no-cache make gcc musl-dev linux-headers git bash
 
 WORKDIR /app
 ENV GOPATH=/go
-RUN git clone https://github.com/vulcanize/ipld-eth-indexer.git /app/indexer
+RUN git clone https://github.com/vulcanize/statediff-migrations /app/statediff
 RUN git clone https://github.com/vulcanize/go-ethereum.git -b v1.9.25-statediff /app/ethereum
 RUN go get -u -d github.com/pressly/goose/cmd/goose
 RUN go build -tags='no_mysql no_sqlite' -o /go/bin/goose github.com/pressly/goose/cmd/goose
 
-RUN cd /app/indexer && make
 RUN cd /app/ethereum && make geth
 COPY datadir /app/datadir
 COPY poanet.json /app
