--- a/test/enviroment/geth/Dockerfile
+++ b/test/enviroment/geth/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add --no-cache make gcc musl-dev linux-headers git bash
 WORKDIR /app
 ENV GOPATH=/go
 RUN git clone https://github.com/vulcanize/ipld-eth-server.git /app/server
-RUN git clone https://github.com/vulcanize/go-ethereum.git -b v1.9.25-statediff /app/ethereum
+RUN git clone https://github.com/vulcanize/go-ethereum.git -b "v1.9.24-statediff-0.0.13" /app/ethereum
 RUN go get -u -d github.com/pressly/goose/cmd/goose
 RUN go build -tags='no_mysql no_sqlite' -o /go/bin/goose github.com/pressly/goose/cmd/goose
 
