CI: fix command to check status of containers

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Checking running containers
         run: |
           sleep 10 && \
+          cd test/enviroment && \
           docker-compose ps -a
       - name: Test
         run: |
