--- a/test/enviroment/local/docker-compose.yml
+++ b/test/enviroment/local/docker-compose.yml
@@ -105,7 +105,7 @@ services:
       - vulcanizedb
       - tracingdb
     build:
-      context: ../../
+      context: ../../../
       cache_from:
        - alpine:latest
        - golang:1.13-alpine
