fix path to dockerfile

--- a/test/enviroment/local/docker-compose.yml
+++ b/test/enviroment/local/docker-compose.yml
@@ -106,6 +106,7 @@ services:
       - tracingdb
     build:
       context: ../../../
+      dockerfile: ./test/enviroment/local/tracing-api
       cache_from:
        - alpine:latest
        - golang:1.13-alpine
